--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8022,6 +8022,11 @@ body {
             }
             .header-description {
               padding-top: 150px;
+              .header-text {
+                p {
+                  font-size: 18px;
+                }
+              }
             }
             .figures {
               .figure {
